# ark

./: ARK_MAIN  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  benchmarks-rust-v-cyrius.md  cyrius.cyml
.github/workflows/: ci.yml  release.yml
benches/: ark_benchmarks.rs
completions/: ark.bash  ark.fish  ark.zsh
docs/architecture/: overview.md
docs/audit/: 2026-04-16-p-1-security-audit.md
docs/development/: roadmap.md
lib/: nous.cyr  nous_command.cyr  nous_error.cyr  nous_graph.cyr  nous_json.cyr  nous_recipe.cyr  nous_registry.cyr  nous_resolver.cyr  nous_sort.cyr  nous_source.cyr  nous_strategy.cyr  nous_sysdb.cyr  nous_types.cyr  nous_util.cyr  nous_version.cyr  sigil.cyr
rust-old/benches/: ark_benchmarks.rs
rust-old/src/: config.rs  lib.rs  main.rs
scripts/: bench-history.sh
src/: bazaar.cyr  cli.cyr  confirm.rs  db.cyr  engine.cyr  lib.rs  main.cyr  output.cyr  recipe.cyr  tests.rs  transaction.cyr  types.cyr  types.rs
tests/: ark.bcyr  ark.fcyr  ark.tcyr
