[package]
name = "ark"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Ark — unified package manager CLI for AGNOS"
homepage = "https://github.com/MacCracken/ark"
repository = "https://github.com/MacCracken/ark"
readme = "README.md"
keywords = ["package", "manager", "install", "cli"]
categories = ["os", "command-line-utilities"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
nous = { path = "../nous", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "ark_benchmarks"
harness = false
